Fix broken case study card on mobile

--- a/style.css
+++ b/style.css
@@ -32,10 +32,6 @@ body{
         margin-left: auto;
         margin-right: auto;
     }
-
-    .circle1{
-        display: none;
-    }
  }
 
 
